# ffmpeg-kit-next

./: .gitignore  CONTRIBUTING.md  README.md  flake.nix  nix-macos.sh  nix.conf
android/: .gitignore  README.md  build.gradle  settings.gradle
android/ffmpeg-kit-next-android-lib/: Doxyfile  build.gradle
android/jni/: Android.mk
apple/: .gitignore  Doxyfile  README.md  configure.ac
apple/src/: AbstractSession.h  AbstractSession.m  ArchDetect.h  ArchDetect.m  AtomicLong.h  AtomicLong.m  Chapter.h  Chapter.m  FFmpegKit.h  FFmpegKit.m  FFmpegKitConfig.h  FFmpegKitConfig.m  FFmpegKitInputBuffer.h  FFmpegKitInputBuffer.m  FFmpegKitOutputBuffer.h  FFmpegKitOutputBuffer.m  FFmpegKitStreamInput.h  FFmpegKitStreamInput.m  FFmpegKitStreamOutput.h  FFmpegKitStreamOutput.m  FFmpegSession.h  FFmpegSession.m  FFmpegSessionCompleteCallback.h  FFprobeKit.h  FFprobeKit.m  FFprobeSession.h  FFprobeSession.m  FFprobeSessionCompleteCallback.h  Level.h  Log.h  Log.m  LogCallback.h  LogRedirectionStrategy.h  Makefile.am  MediaInformation.h  MediaInformation.m  MediaInformationJsonParser.h  MediaInformationJsonParser.m  MediaInformationSession.h  MediaInformationSession.m  (+35 more)
docs/: _config.yml  index.md
flutter/flutter/: BUILD.md  CHANGELOG.md  README.md  copy_local_binaries.sh  pubspec.yaml
flutter/flutter/linux/: .gitignore  CMakeLists.txt  ffmpeg_kit_flutter_plugin.cc
flutter/flutter/linux/include/ffmpeg_kit_next_flutter/: f_fmpeg_kit_flutter_plugin.h
flutter/flutter_platform_interface/: CHANGELOG.md  LICENSE  pubspec.yaml
linux/: Doxyfile  README.md  configure.ac
linux/src/: .gitignore  AbstractSession.cpp  ArchDetect.cpp  ArchDetect.h  Chapter.cpp  Chapter.h  FFmpegKit.cpp  FFmpegKitConfig.cpp  FFmpegKitConfig.h  FFmpegKitInputBuffer.cpp  FFmpegKitStreamInput.cpp  FFmpegKitStreamInput.h  FFmpegKitStreamOutput.h  FFmpegSession.h  FFmpegSessionCompleteCallback.h  FFprobeKit.h  FFprobeSession.cpp  FFprobeSession.h  FFprobeSessionCompleteCallback.h  Log.cpp  Makefile.am  MediaInformation.cpp  MediaInformation.h  MediaInformationJsonParser.cpp  MediaInformationJsonParser.h  MediaInformationSessionCompleteCallback.h  Packages.cpp  Packages.h  ReturnCode.h  Session.h  SessionDeleteListener.h  SessionState.h  Signal.h  Statistics.cpp  Statistics.h  StatisticsCallback.h  StreamInformation.cpp  StreamInformation.h  ffmpeg_context.h  ffmpegkit_exception.cpp  (+17 more)
linux/src/fftools/: cmdutils.c  ffmpeg.h  ffmpeg_dec.c  ffmpeg_filter.c  ffmpeg_mux.h  ffprobe.c  opt_common.c  opt_common.h  sync_queue.h
linux/src/fftools/resources/: graph_resources.c  resman.h
linux/src/json/: Value.cpp  Value.h
react-native/: .gitignore  BUILD.md  CHANGELOG.md  README.md  copy_local_binaries.sh  ffmpeg-kit-next-react-native.podspec  package.json
react-native/android/: build.gradle
react-native/ios/: FFmpegKitReactNativeModule.h  FFmpegKitReactNativeModule.mm
react-native/src/: NativeFFmpegKitReactNativeModule.ts  index.d.ts  index.js
scripts/: function-android.sh  function-apple.sh  function-ios.sh  function-linux.sh  function-macos.sh  function-tvos.sh  function-visionos.sh  function-web.sh  function.sh  help-android.sh  help-apple.sh  help-ios.sh  help-linux.sh  help-macos.sh  help-tvos.sh  help-visionos.sh  help-web.sh  main-android.sh  main-ios.sh  main-linux.sh  main-macos.sh  main-tvos.sh  main-visionos.sh  main-web.sh  run-linux.sh  run-web.sh  source.sh  start-android.sh  start-apple.sh  start-ios.sh  start-linux.sh  start-macos.sh  start-tvos.sh  start-visionos.sh  start-web.sh  variable.sh
scripts/android/: chromaprint.sh  cpu-features.sh  dav1d.sh  ffmpeg-kit-protocols-test.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  jpeg.sh  libaom.sh  libiconv.sh  libjxl.sh  libsvtav1.sh  libtheora.sh  openssl.sh  rubberband.sh  sdl.sh  snappy.sh  srt.sh  tesseract.sh  tiff.sh  vvenc.sh  x265.sh
scripts/apple/: dav1d.sh  ffmpeg-kit-protocols-test.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  jpeg.sh  libaom.sh  libilbc.sh  libjxl.sh  liblc3.sh  libpng.sh  libsvtav1.sh  libvpx.sh  openssl.sh  rubberband.sh  sdl.sh  snappy.sh  tesseract.sh  tiff.sh  vvenc.sh
scripts/linux/: chromaprint.sh  dav1d.sh  ffmpeg-kit-protocols-test.sh  ffmpeg-kit.sh  ffmpeg.sh  libaom.sh  libjxl.sh  liblc3.sh  libsvtav1.sh  openh264.sh  openssl.sh  srt.sh  vvenc.sh  zimg.sh
scripts/web/: chromaprint.sh  dav1d.sh  expat.sh  ffmpeg-kit-protocols-test.sh  ffmpeg-kit.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  fribidi.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  jpeg.sh  kvazaar.sh  lame.sh  leptonica.sh  libaom.sh  libass.sh  libilbc.sh  libjxl.sh  liblc3.sh  libogg.sh  libpng.sh  libsamplerate.sh  libsndfile.sh  libsvtav1.sh  libtheora.sh  libvidstab.sh  libvorbis.sh  libvpx.sh  libwebp.sh  libxml2.sh  nettle.sh  opencore-amr.sh  openh264.sh  openssl.sh  opus.sh  rubberband.sh  sdl.sh  (+14 more)
tools/: clean.sh  set-version.sh
tools/docs/: android_doc.sh  android_javadoc.sh
tools/protocols/: libavformat_file_ffkitmem_stream.c  libavformat_file_ffkitsaf.inc  libavutil_file.c  libavutil_file.h
tools/source/: SOURCE
web/: .gitignore  Doxyfile  README.md  configure.ac  package.json
web/binding/: FFmpegKit.js  FFmpegKitConfig.js  FFmpegKitFactory.js  FFprobeKit.js  enums.js  ffmpegkit.worker.js  index.d.ts  index.js  io.js  models.js  session.js
web/src/: AbstractSession.h  ArchDetect.cpp  Chapter.cpp  FFmpegKit.h  Level.h  (+23 more)
(+168 files in other folders)
